--- a/package.json
+++ b/package.json
@@ -9,18 +9,28 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
+    "@mui/icons-material": "^7.3.5",
+    "@mui/material": "^7.3.5",
+    "@mui/material-nextjs": "^7.3.5",
+    "@mui/x-charts": "^8.18.0",
+    "@mui/x-data-grid": "^8.18.0",
+    "@mui/x-date-pickers": "^8.18.0",
+    "@mui/x-tree-view": "^8.18.0",
+    "@react-spring/web": "^10.0.3",
+    "clsx": "^2.1.1",
+    "dayjs": "^1.11.19",
     "next": "16.0.3",
     "react": "19.2.0",
     "react-dom": "19.2.0"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "16.0.3",
-    "tailwindcss": "^4",
     "typescript": "^5"
   }
 }
