--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "dayjs": "^1.11.19",
     "next": "16.0.3",
     "react": "19.2.0",
-    "react-dom": "19.2.0"
+    "react-dom": "19.2.0",
+    "reactflow": "^11.11.4"
   },
   "devDependencies": {
     "@types/node": "^20",
